criando tela carrinho de compras

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<router-outlet></router-outlet>
-<!-- 
-<app-login-page></app-login-page> -->
-
-<!-- <app-reset-password-page></app-reset-password-page> -->
-
-<!-- <app-signup-page></app-signup-page> -->
-
 <app-navbar></app-navbar>
-<app-pets-page-component></app-pets-page-component>
+<app-cart-page></app-cart-page>
