add spinner para loading das paginas e criando diretiva para a mascara de cpf

--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -4,11 +4,12 @@
             <span class="uk-icon" uk-icon="icon: logo-color-dark; ratio: 0.7"></span>
         </p>
 
-        <form [formGroup]="form">
+        <app-loading *ngIf="busy" ></app-loading>
+        <form [formGroup]="form" *ngIf="!busy">
             <div class="uk-card uk-card-primary uk-card-body uk-box-shadow-small">
                 <h3 class="uk-card-title">Autentique-se</h3>
                 <div class="uk-margin">
-                    <input class="uk-input uk-form-large" formControlName="username" type="text" placeholder="CPF"
+                    <input class="uk-input uk-form-large" formControlName="username" type="text" placeholder="CPF" mask="###.###.###-##"
                     [ngClass]="{'uk-form-danger': (!form.controls.username.valid && !form.controls.username.pristine)}" >
 
                 </div>
@@ -20,7 +21,7 @@
                 </div>
             </div>
         </form>
-        <p class="uk-text-center">
+        <p class="uk-text-center" *ngIf="!busy">
             <a [routerLink]="['/signup']"
                 class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-bottom">Quero me
                 cadastrar</a>
