--- a/src/app/componets/shared/navbar/navbar.component.html
+++ b/src/app/componets/shared/navbar/navbar.component.html
@@ -16,16 +16,17 @@
             <div class="uk-navbar-right">
                 <ul class="uk-navbar-nav">
                     <li><a [routerLink]="['/cart']" routerLinkActive="uk-text-bold">
-                        Carrinho
+                            Carrinho
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: cart"></span>
                             <span class="uk-badge">0</span>
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="/account">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: user"></span>
+                            {{ user?.name }}
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li><a (click)="logout()">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: sign-out"></span>
                         </a>
                     </li>
