--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -26,7 +26,7 @@
                 class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-bottom">Quero me
                 cadastrar</a>
             <br>
-            <a href="/reset-password" class="uk-botton uk-button-link">Esqueci minha senha</a>
+            <a [routerLink]="['/signup']" class="uk-botton uk-button-link">Esqueci minha senha</a>
         </p>
     </div>
 </div>
