--- a/src/app/pages/account/reset-password-page/reset-password-page.component.html
+++ b/src/app/pages/account/reset-password-page/reset-password-page.component.html
@@ -4,18 +4,25 @@
             <span class="uk-icon" uk-icon="icon: logo-color-dark; ratio: 0.7"></span>
         </p>
 
-        <div class="uk-card uk-card-primary uk-card-body uk-box-shadow-small">
-            <h3 class="uk-card-title">Restauração de Senha</h3>
-            <div class="uk-margin">
-                <input class="uk-input uk-form-large" type="email" placeholder="E-mail">
+        <app-loading *ngIf="busy"></app-loading>
+
+
+        <form [formGroup]="form" *ngIf="!busy">
+            <div class="uk-card uk-card-primary uk-card-body uk-box-shadow-small">
+                <h3 class="uk-card-title">Restauração de Senha</h3>
+                <div class="uk-margin">
+                    <input class="uk-input uk-form-large" formControlName="document" type="text" placeholder="CPF"
+                        mask="###.###.###-##"
+                        [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}">
+                </div>
+                <div class="uk-margin uk-text-right">
+                    <button [routerLink]="['/login']" class="uk-button uk-button-default" [disabled]="form.invalid"
+                        (click)="submit()">Restaurar Senha</button>
+                </div>
             </div>
-            
-            <div class="uk-margin uk-text-right">
-                <a href="/login" class="uk-button uk-button-default">Restaurar Senha</a>
-            </div>
-        </div>
-        <p class="uk-text-center"> 
-            <a href="/login" class="uk-botton uk-button-link">Voltar </a>
+        </form>
+        <p class="uk-text-center" *ngIf="!busy">
+            <a [routerLink]="['/login']" class="uk-botton uk-button-link">Cancelar</a>
         </p>
     </div>
 </div>
