finalizando tela de profile usuario

--- a/src/app/componets/shared/navbar/navbar.component.html
+++ b/src/app/componets/shared/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                             <span class="uk-badge">0</span>
                         </a>
                     </li>
-                    <li><a href="/account">
+                    <li><a [routerLink]="['/account']">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: user"></span>
                             {{ user?.name }}
                         </a>
