finalizando carrinho de compras

--- a/src/app/componets/store/product-card/product-card.component.html
+++ b/src/app/componets/store/product-card/product-card.component.html
@@ -5,7 +5,7 @@
     <div class="uk-card-body">
         <h3 class="uk-card-title">{{(product.price/100) | currency: 'BRL'}}</h3>
         <p>{{ product.title }}</p>
-        <button class="uk-button uk-button-default">
+        <button class="uk-button uk-button-default" (click)="addToCart()">
             <span class="uk-icon uk-margin-small-right" uk-icon="icon: cart"></span>
             Adicionar
         </button>
