--- a/src/app/pages/account/pets-page/pets-page.component.html
+++ b/src/app/pages/account/pets-page/pets-page.component.html
@@ -7,9 +7,7 @@
         </div>
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
-                <li class="uk-active">
-                    <a href="#">
-                        <span class="uk-icon uk-margin-small-right" uk-icon="icon: plus"></span>
+                <li class="uk-active"><a href="#"><span class="uk-icon uk-margin-small-right" uk-icon="icon: plus"></span>
                         Adicionar
                     </a>
                 </li>
